Changes for 1.8.0:

- Removed backwards compatibility for:
	- NOQUIT
	- UNCONNECT
	- TSMODE
	- NICKIP
  All of these modes are now REQUIRED.
- Removed Code and defines for outdated stuff:
	- FOLLOW_IDENT_RFC
	- NO_IDENT_SYSTYPE_OTHER
	- NO_MIXED_CASE
	- OLD_Y_LIMIT
	- USE_REJECT_HOLD
  This code is no longer used.
- Removed define options for:
	- CLIENT_COUNT
  This code is now manditory.
- Completely rewrote configuration structures.
- Rewrote methods for connecting to servers.
- Outdated Link structure config linking, now linking directly from
  aClient(user/serv) structures to appropriate conf strucutures.
- Backported lucas's aListener structure and routines from defunct
  bahamut-devel tree.
- Implemented +I/+e channel lists - thanks seddy.
- Ports now can be opened and closed on /rehash
- config file format changed to bind-style
- klinefile outdated
- replaced dbufs with sbufs - shared buffers.
- removed old High Traffic Mode (HTM) code
- config option block added to outdate use of ./config script
- fixes for solaris and OSX compatibility
- Added support for /dev/poll and epoll socket engines - thats seddy.
- Moved m_server and m_dkey into m_server.c
- Moved m_stats into m_stats.c
- Fixed memory counting routines.  Thanks Quension!