@@ -1271,10 +1271,6 @@ extern int  spam_num;
 extern int  spam_time;
 #endif
 
-#ifdef NO_CHANOPS_WHEN_SPLIT
-extern int  server_split_recovery_time;
-#endif
-
 /* m_set - set options while running */
 int 
 m_set(aClient *cptr, aClient *sptr, int parc, char *parv[])
@@ -1406,36 +1402,6 @@ m_set(aClient *cptr, aClient *sptr, int parc, char *parv[])
                 sendto_one(sptr, ":%s NOTICE %s :flud BLOCK is currently %i",
                            me.name, parv[0], flud_block);
                 return 0;
-            }
-        }
-#endif
-#ifdef NO_CHANOPS_WHEN_SPLIT
-        else if (!strncasecmp(command, "SPLITDELAY", 10)) 
-        {
-            if (parc > 2) 
-            {
-                int newval = atoi(parv[2]);
-                if (newval < 0) 
-                {
-                    sendto_one(sptr, ":%s NOTICE %s :split delay must be >= 0",
-                               me.name, parv[0]);
-                    return 0;
-                }
-                if (newval > MAX_SERVER_SPLIT_RECOVERY_TIME)
-                    newval = MAX_SERVER_SPLIT_RECOVERY_TIME;
-                sendto_ops("%s has changed spam SERVER SPLIT RECOVERY TIME "
-                           "to %i", parv[0], newval);
-                sendto_one(sptr, ":%s NOTICE %s :SERVER SPLIT RECOVERY TIME "
-                           "is now set to %i", me.name, parv[0], newval);
-                server_split_recovery_time = (newval * 60);
-                return 0;
-
-            }
-            else
-            {
-                sendto_one(sptr, ":%s NOTICE %s :SERVER SPLIT RECOVERY TIME "
-                           "is currenly %i", me.name, parv[0],
-                           server_split_recovery_time / 60);
             }
         }
 #endif
